# tuicommander

./: .gitignore  AGENTS.md  ALL-review.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SPEC.md  biome.json  codex-stories.md  mobile.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  to-test.md  todo.md  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: FEATURES.md  plugins.md  sync-matrix.md
docs/api/: http-api.md  tauri-commands.md
docs/architecture/: data-flow.md  terminal-state-machine.md
docs/backend/: alacritty-integration.md  config.md  dictation.md  git.md  github.md  mcp-http.md  mcp-proxy.md  output-parser.md  pty.md
docs/features/: ssh-tunnels.md
docs/frontend/: canvas-terminal-audit.md  components.md  hooks.md  terminal-features.md  transport.md
docs/guides/: development-setup.md
docs/user-guide/: agent-teams.md  ai-agents.md  ai-chat.md  branches.md  command-palette.md  dictation.md  github-integration.md  keyboard-shortcuts.md  plugins.md  remote-access.md  settings.md  sidebar.md  terminals.md  worktrees.md
scripts/: dev-install.sh  generate-release-notes.sh
scripts/hooks/: install-hooks.sh  pre-push
src/: App.tsx  agents.ts  global.css  invoke.ts  keybindingDefaults.ts  panelRouter.tsx  platform.ts  styles.css  transport.ts
src-tauri/: .gitignore  Cargo.toml  build-sidecar.mjs  build.rs  tauri.conf.json  tauri.personal.conf.json
src-tauri/.config/: nextest.toml
src-tauri/binaries/: tuic-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/crates/tuic-cli/: Cargo.toml
src-tauri/crates/tuic-cli/src/: ipc.rs  main.rs
src-tauri/src/: agent.rs  agent_hook.rs  agent_hook_codex.rs  agent_hook_commands.rs  agent_hook_installer.rs  agent_mcp.rs  agent_session.rs  ai_chat.rs  ai_chat_registry.rs  app_logger.rs  chrome.rs  (+42 more)
tools/relay/: Cargo.toml
tools/relay/src/: db.rs  push.rs
website/: index.html  package.json  pnpm-lock.yaml
(+448 files in other folders)
