[package]
name = "tuic-relay"
version = "0.1.0"
edition = "2021"
description = "Blind E2E-encrypted WebSocket relay for TUICommander mobile access"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
argon2 = "0.5"
getrandom = "0.4"
web-push-native = { version = "0.4", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
base64ct = { version = "1", features = ["alloc"] }
http = "1"

[dev-dependencies]
tokio-tungstenite = "0.30"
